<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/BLANCO"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:text="@string/TITULO"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/D_CEDULA"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingresa_Cedula"
            android:text="@string/INGRESA_CEDULA"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/D_NOMBRE"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingresa_Nombre"
            android:text="@string/INGRESA_NOMBRE"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/D_TELEFONO"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="italic"></TextView>


        <EditText

            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_weight="2"
            android:id="@+id/Ingresa_Telefono"
            android:text="@string/INGRESA_TELEFONO"
            android:textStyle="italic"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textAlignment="center">

        </EditText>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_gravity="center"
        android:text="@string/BLANCO"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Guarda"
            android:text="@string/BOTON_GUARDAR"
            android:textSize="20sp"
            android:textAlignment="center">

        </Button>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/Consulta"
            android:text="@string/BOTON_CONSULTAR"
            android:textSize="20sp"
            android:textAlignment="center">

        </Button>

    </LinearLayout>

</LinearLayout>